--- a/public/dsrg/schedule/index.html
+++ b/public/dsrg/schedule/index.html
@@ -9,9 +9,10 @@
   <meta name="author" content="PDOS">
 
   
-  <meta name="description" content=" Schedule May 30th, 2013 5/23/2013: Raft
-5/30/2013: Spanner
-6/6/2013: PacificA May 30th, 2013 Tweet Recent Posts Spanner Raft ">
+  <meta name="description" content="Schedule May 30th, 2013 5/23/2013: Raft (Neha)
+5/30/2013: Spanner (Cody)
+6/6/2013: PacificA (Bryan)
+6/13/2013: CATOCS, and also a response (Neha) &hellip;">
   
 
   <!-- http://t.co/dKP3o1e -->
@@ -99,9 +100,10 @@
   </header>
   
   <ul>
-<li>5/23/2013: Raft</li>
-<li>5/30/2013: Spanner</li>
-<li>6/6/2013: PacificA</li>
+<li>5/23/2013: <a href="https://ramcloud.stanford.edu/wiki/download/attachments/11370504/raft.pdf">Raft</a> (Neha)</li>
+<li>5/30/2013: <a href="https://www.usenix.org/system/files/conference/osdi12/osdi12-final-16.pdf">Spanner</a> (Cody)</li>
+<li>6/6/2013: <a href="http://research.microsoft.com/apps/mobile/Publication.aspx?id=66814">PacificA</a> (Bryan)</li>
+<li>6/13/2013: <a href="http://cs3.ist.unomaha.edu/~stanw/papers/93-catocs.pdf">CATOCS</a>, and also a <a href="http://www.csie.fju.edu.tw/~yeh/research/papers/os-reading-list/birman93response-to-cheriton.pdf">response</a> (Neha)</li>
 </ul>
 
 
