--- a/public/dsrg/papers/index.html
+++ b/public/dsrg/papers/index.html
@@ -163,7 +163,7 @@ Eugene, TBD</p>
 
 <h2>Related but Already Covered</h2>
 
-<p>note: we probably won’t read anything already covered <a href="http://pdos.csail.mit.edu/6.824/schedule.html">here</a></p>
+<p>Note: we probably won’t read anything covered in <a href="http://pdos.csail.mit.edu/6.824/schedule.html">6.824</a>, but you should.</p>
 
 <p><a href="http://ece842.com/S13/readings/chandra2007.pdf">Paxos Made Live: An Engineering Perspective</a></p>
 
