--- a/public/dsrg/about/index.html
+++ b/public/dsrg/about/index.html
@@ -10,7 +10,8 @@
 
   
   <meta name="description" content="About DSRG is a Distributed Systems Reading Group at MIT. We meet once a
-week on the 9th floor of Stata to discuss distributed systems research &hellip;">
+week on the 9th floor of Stata to discuss
+distributed systems research &hellip;">
   
 
   <!-- http://t.co/dKP3o1e -->
@@ -87,8 +88,8 @@ week on the 9th floor of Stata to discuss distributed systems research &hellip;"
   </header>
   
   <p>DSRG is a Distributed Systems Reading Group at MIT.  We meet once a
-week on the 9th floor of Stata to discuss distributed systems research
-papers.</p>
+week on the 9th floor of <a href="http://goo.gl/maps/IgVd5">Stata</a> to discuss
+distributed systems research papers.</p>
 
 <p>We cover papers from conferences like SOSP, OSDI, PODC, VLDB, and
 SIGMOD, to name a few.  We try to have a healthy mix of current
@@ -100,7 +101,7 @@ welcome non-MIT attendees who want to participate.  We will also
 broadcast the meetings via Google Hangout by request, but we&rsquo;ve
 decided not to record them.</p>
 
-<p>Email <a href="&#x6d;&#97;&#105;&#x6c;&#x74;&#x6f;&#58;&#x6e;&#97;&#114;&#x75;&#x6c;&#x61;&#x40;&#x6d;&#105;&#x74;&#46;&#101;&#x64;&#x75;">&#x6e;&#97;&#114;&#117;&#x6c;&#97;&#x40;&#x6d;&#105;&#116;&#x2e;&#101;&#100;&#117;</a> with any questions.</p>
+<p>Email <a href="&#109;&#x61;&#x69;&#108;&#x74;&#111;&#x3a;&#x6e;&#x61;&#x72;&#117;&#108;&#x61;&#x40;&#109;&#x69;&#x74;&#x2e;&#101;&#x64;&#117;">&#x6e;&#97;&#114;&#x75;&#108;&#97;&#x40;&#109;&#105;&#116;&#46;&#101;&#x64;&#117;</a> with any questions.</p>
 
   
     <footer>
