draft of cheriton and skeen

--- a/public/dsrg/papers/index.html
+++ b/public/dsrg/papers/index.html
@@ -158,7 +158,7 @@ Eugene, TBD</p>
 
 <p><a href="http://www.cs.princeton.edu/courses/archive/fall11/cos518/papers/viewstamped.pdf">Viewstamped Replication:  A new primary copy method to support highly-available distributed systems</a></p>
 
-<p><a href="http://18.7.29.232/bitstream/handle/1721.1/71763/MIT-CSAIL-TR-2012-021.pdf">Viewstamped Replication Revisited</a></p>
+<p><a href="http://pmg.csail.mit.edu/papers/vr-revisited.pdf">Viewstamped Replication Revisited</a></p>
 
   
     <footer>
