--- a/public/dsrg/schedule/index.html
+++ b/public/dsrg/schedule/index.html
@@ -13,7 +13,7 @@
 5/30/2013: Spanner (Cody)
 6/6/2013: PacificA (Bryan)
 6/13/2013: CATOCS, and also a response (Neha)
-6/20/2013: ( &hellip;">
+6/20/2013: &hellip;">
   
 
   <!-- http://t.co/dKP3o1e -->
@@ -94,7 +94,7 @@
 <li>5/30/2013: <a href="https://www.usenix.org/system/files/conference/osdi12/osdi12-final-16.pdf">Spanner</a> (Cody)</li>
 <li>6/6/2013: <a href="http://research.microsoft.com/apps/mobile/Publication.aspx?id=66814">PacificA</a> (Bryan)</li>
 <li>6/13/2013: <a href="http://cs3.ist.unomaha.edu/~stanw/papers/93-catocs.pdf">CATOCS</a>, and also a <a href="http://www.csie.fju.edu.tw/~yeh/research/papers/os-reading-list/birman93response-to-cheriton.pdf">response</a> (Neha)</li>
-<li>6/20/2013: (Charles)</li>
+<li>6/20/2013: <a href="http://pmg.csail.mit.edu/papers/vr-revisited.pdf">Viewstamped Replication Revisited</a>(Charles)</li>
 </ul>
 
 
