--- a/public/dsrg/about/index.html
+++ b/public/dsrg/about/index.html
@@ -101,7 +101,7 @@ welcome non-MIT attendees who want to participate.  We will also
 broadcast the meetings via Google Hangout by request, but we&rsquo;ve
 decided not to record them.</p>
 
-<p>Email <a href="&#109;&#97;&#105;&#x6c;&#x74;&#x6f;&#x3a;&#110;&#97;&#114;&#117;&#x6c;&#x61;&#64;&#x6d;&#105;&#x74;&#46;&#x65;&#x64;&#117;">&#110;&#x61;&#114;&#117;&#x6c;&#97;&#x40;&#109;&#105;&#x74;&#46;&#101;&#x64;&#x75;</a> with any questions.</p>
+<p>Email <a href="&#x6d;&#x61;&#105;&#108;&#116;&#111;&#x3a;&#110;&#x61;&#x72;&#x75;&#108;&#x61;&#64;&#109;&#105;&#116;&#x2e;&#101;&#x64;&#x75;">&#110;&#x61;&#114;&#117;&#108;&#97;&#x40;&#109;&#105;&#116;&#46;&#x65;&#100;&#117;</a> with any questions.</p>
 
   
     <footer>
