change author to something more general

--- a/public/dsrg/index.html
+++ b/public/dsrg/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <title>DSRG</title>
-  <meta name="author" content="PDOS">
+  <meta name="author" content="DSRG">
 
   
   <meta name="description" content="Why did we read this paper? Several of the papers we&rsquo;ve read recently have focused on
@@ -1164,7 +1164,7 @@ implement are still evidenced in Raft.</p>
     </div>
   </div>
   <footer role="contentinfo"><p>
-  Copyright &copy; 2013 - PDOS -
+  Copyright &copy; 2013 - DSRG -
   <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
 </p>
 
