--- a/public/dsrg/papers/index.html
+++ b/public/dsrg/papers/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <title>papers - DSRG</title>
-  <meta name="author" content="PDOS">
+  <meta name="author" content="DSRG">
 
   
   <meta name="description" content="Papers Consensus In Search of an Understandable Consensus Algorithm (Raft)
@@ -221,7 +221,7 @@ Eugene, TBD</p>
     </div>
   </div>
   <footer role="contentinfo"><p>
-  Copyright &copy; 2013 - PDOS -
+  Copyright &copy; 2013 - DSRG -
   <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
 </p>
 
