--- a/public/dsrg/schedule/index.html
+++ b/public/dsrg/schedule/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <title>schedule - DSRG</title>
-  <meta name="author" content="PDOS">
+  <meta name="author" content="DSRG">
 
   
   <meta name="description" content="Schedule 5/23/2013: Raft (Neha)
@@ -159,7 +159,7 @@
     </div>
   </div>
   <footer role="contentinfo"><p>
-  Copyright &copy; 2013 - PDOS -
+  Copyright &copy; 2013 - DSRG -
   <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
 </p>
 
