--- a/public/dsrg/about/index.html
+++ b/public/dsrg/about/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <title>about - DSRG</title>
-  <meta name="author" content="PDOS">
+  <meta name="author" content="DSRG">
 
   
   <meta name="description" content="About DSRG is a Distributed Systems Reading Group at MIT. We meet once a
@@ -101,7 +101,7 @@ welcome non-MIT attendees who want to participate.  We will also
 broadcast the meetings via Google Hangout by request, but we&rsquo;ve
 decided not to record them.</p>
 
-<p>Email <a href="&#x6d;&#x61;&#x69;&#x6c;&#116;&#111;&#58;&#x6e;&#97;&#x72;&#117;&#x6c;&#x61;&#64;&#x6d;&#105;&#116;&#46;&#x65;&#x64;&#x75;">&#110;&#97;&#114;&#x75;&#108;&#x61;&#64;&#109;&#x69;&#116;&#x2e;&#101;&#x64;&#x75;</a> with any questions.</p>
+<p>Email <a href="&#109;&#x61;&#105;&#108;&#116;&#x6f;&#x3a;&#110;&#97;&#x72;&#x75;&#x6c;&#97;&#x40;&#x6d;&#x69;&#116;&#46;&#101;&#100;&#117;">&#x6e;&#x61;&#x72;&#x75;&#108;&#x61;&#64;&#109;&#x69;&#116;&#x2e;&#101;&#100;&#x75;</a> with any questions.</p>
 
   
     <footer>
@@ -162,7 +162,7 @@ decided not to record them.</p>
     </div>
   </div>
   <footer role="contentinfo"><p>
-  Copyright &copy; 2013 - PDOS -
+  Copyright &copy; 2013 - DSRG -
   <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
 </p>
 
