add some papers

--- a/public/dsrg/schedule/index.html
+++ b/public/dsrg/schedule/index.html
@@ -96,7 +96,8 @@
 <li>6/13/2013: <a href="http://cs3.ist.unomaha.edu/~stanw/papers/93-catocs.pdf">CATOCS</a>, and also a <a href="http://www.csie.fju.edu.tw/~yeh/research/papers/os-reading-list/birman93response-to-cheriton.pdf">response</a> (Neha)</li>
 <li>6/20/2013: <a href="http://pmg.csail.mit.edu/papers/vr-revisited.pdf">Viewstamped Replication Revisited</a> (Charles)</li>
 <li>7/3/2013: <a href="http://www.cs.columbia.edu/~lierranli/coms6998-11Fall2012/papers/thia_sosp2011.pdf">Thialfi</a> (Austin)</li>
-<li>7/11/2013: Zookeeper (Yandong)</li>
+<li>7/11/2013: <a href="https://www.usenix.org/legacy/event/usenix10/tech/full_papers/Hunt.pdf">Zookeeper</a> (Yandong)</li>
+<li>7/18/2013: <a href="http://www.coralcdn.org/docs/coral-nsdi04.pdf">CoralCDN</a> (Michael)</li>
 </ul>
 
 
