--- a/public/dsrg/about/index.html
+++ b/public/dsrg/about/index.html
@@ -101,7 +101,7 @@ welcome non-MIT attendees who want to participate.  We will also
 broadcast the meetings via Google Hangout by request, but we&rsquo;ve
 decided not to record them.</p>
 
-<p>Email <a href="&#109;&#97;&#x69;&#x6c;&#x74;&#x6f;&#x3a;&#110;&#x61;&#x72;&#117;&#108;&#x61;&#64;&#109;&#105;&#116;&#x2e;&#x65;&#100;&#x75;">&#x6e;&#x61;&#114;&#x75;&#x6c;&#x61;&#64;&#x6d;&#105;&#116;&#x2e;&#x65;&#x64;&#117;</a> with any questions.</p>
+<p>Email <a href="&#109;&#97;&#105;&#x6c;&#x74;&#111;&#x3a;&#110;&#x61;&#114;&#x75;&#108;&#97;&#64;&#109;&#105;&#116;&#x2e;&#x65;&#x64;&#117;">&#x6e;&#97;&#x72;&#117;&#108;&#x61;&#64;&#x6d;&#105;&#x74;&#x2e;&#101;&#100;&#x75;</a> with any questions.</p>
 
   
     <footer>
