--- a/public/dsrg/about/index.html
+++ b/public/dsrg/about/index.html
@@ -101,7 +101,7 @@ welcome non-MIT attendees who want to participate.  We will also
 broadcast the meetings via Google Hangout by request, but we&rsquo;ve
 decided not to record them.</p>
 
-<p>Email <a href="&#x6d;&#x61;&#x69;&#108;&#x74;&#x6f;&#x3a;&#x6e;&#x61;&#x72;&#x75;&#x6c;&#x61;&#x40;&#109;&#x69;&#x74;&#46;&#x65;&#x64;&#117;">&#110;&#97;&#x72;&#x75;&#x6c;&#x61;&#64;&#109;&#x69;&#x74;&#x2e;&#101;&#100;&#117;</a> with any questions.</p>
+<p>Email <a href="&#x6d;&#x61;&#x69;&#x6c;&#116;&#x6f;&#x3a;&#x6e;&#97;&#114;&#117;&#108;&#x61;&#x40;&#109;&#x69;&#x74;&#46;&#x65;&#100;&#x75;">&#x6e;&#97;&#x72;&#117;&#108;&#x61;&#64;&#109;&#x69;&#x74;&#46;&#101;&#100;&#x75;</a> with any questions.</p>
 
   
     <footer>
