--- a/public/dsrg/about/index.html
+++ b/public/dsrg/about/index.html
@@ -101,7 +101,7 @@ welcome non-MIT attendees who want to participate.  We will also
 broadcast the meetings via Google Hangout by request, but we&rsquo;ve
 decided not to record them.</p>
 
-<p>Email <a href="&#109;&#x61;&#105;&#108;&#x74;&#111;&#58;&#110;&#x61;&#x72;&#117;&#108;&#x61;&#64;&#109;&#105;&#x74;&#x2e;&#x65;&#100;&#117;">&#x6e;&#x61;&#114;&#x75;&#108;&#97;&#64;&#x6d;&#x69;&#x74;&#x2e;&#101;&#x64;&#117;</a> with any questions.</p>
+<p>Email <a href="&#x6d;&#97;&#105;&#108;&#x74;&#111;&#58;&#x6e;&#x61;&#114;&#x75;&#x6c;&#x61;&#64;&#109;&#x69;&#116;&#x2e;&#101;&#100;&#x75;">&#110;&#x61;&#114;&#x75;&#108;&#97;&#x40;&#x6d;&#105;&#x74;&#x2e;&#x65;&#100;&#x75;</a> with any questions.</p>
 
   
     <footer>
@@ -190,7 +190,7 @@ decided not to record them.</p>
     </div>
   </div>
   <footer role="contentinfo"><p>
-  Copyright &copy; 2013 - DSRG -
+  Copyright &copy; 2014 - DSRG -
   <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
 </p>
 
