--- a/public/dsrg/papers/index.html
+++ b/public/dsrg/papers/index.html
@@ -107,7 +107,7 @@
 
 <p><a href="http://research.microsoft.com/apps/mobile/Publication.aspx?id=66814">PacificA: Replication in Log-Based Distributed Storage Systems</a></p>
 
-<p><a href="http://db2.usenix.org/events/osdi04/tech/full_papers/renesse/renesse.pdf">Chain Replication for Supporting High Throughput and Availability</a></p>
+<p><a href="https://www.usenix.org/legacy/event/osdi04/tech/full_papers/renesse/renesse.pdf">Chain Replication for Supporting High Throughput and Availability</a></p>
 
 <p><a href="http://www.cs.cornell.edu/home/rvr/newpapers/opodis2012.pdf">Byzantine Chain Replication</a></p>
 
@@ -256,7 +256,7 @@
     </div>
   </div>
   <footer role="contentinfo"><p>
-  Copyright &copy; 2013 - DSRG -
+  Copyright &copy; 2014 - DSRG -
   <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
 </p>
 
