Deploy by jon@x1c3

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -15,6 +15,7 @@
   <link rel="canonical" href="http://dsrg.pdos.csail.mit.edu/schedule/">
   <link rel="alternate" type="application/rss+xml" title="Distributed Systems Reading Group" href="http://dsrg.pdos.csail.mit.edu/feed.xml" />
   <link href='/stylesheets/all-b5d41f4fa671ec94597e984da68527b0.css' media='all' rel='stylesheet' type='text/css'>
+  <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 </head>
 
   <body>
