Deploy by jon@x1c3

--- a/about/index.html
+++ b/about/index.html
@@ -77,13 +77,15 @@ distributed systems research papers, and cover papers from conferences
 like SOSP, OSDI, PODC, VLDB, and SIGMOD. We try to have a healthy mix of
 current systems papers and older seminal papers.</p>
 
-<p>You can join our mailing list
-<a href="https://lists.csail.mit.edu/mailman/listinfo/ds-reading">here</a>.  We
-welcome non-MIT attendees who want to participate.  We will also
+<p>You can join our mailing list,
+<a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#100;&#115;&#114;&#103;&#064;&#099;&#115;&#097;&#105;&#108;&#046;&#109;&#105;&#116;&#046;&#101;&#100;&#117;">&#100;&#115;&#114;&#103;&#064;&#099;&#115;&#097;&#105;&#108;&#046;&#109;&#105;&#116;&#046;&#101;&#100;&#117;</a>
+<a href="https://lists.csail.mit.edu/mailman/listinfo/dsrg">here</a>.
+We welcome non-MIT attendees who want to participate. We will also
 broadcast the meetings via Google Hangout by request, but we’ve decided
 not to record them.</p>
 
-<p>Email jfrg@mit.edu with any questions.</p>
+<p>Email the mailing list or <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#106;&#102;&#114;&#103;&#064;&#109;&#105;&#116;&#046;&#101;&#100;&#117;">&#106;&#102;&#114;&#103;&#064;&#109;&#105;&#116;&#046;&#101;&#100;&#117;</a> with any
+questions.</p>
 
   </article>
 
