--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="/css/main.css">
   <link rel="canonical" href="http://dsrg.pdos.csail.mit.edu/about/">
   <link rel="alternate" type="application/rss+xml" title="Distributed Systems Reading Group" href="http://dsrg.pdos.csail.mit.edu/feed.xml" />
-  <link href='/stylesheets/all-2488fcdfe55841680be5624d2de99a44.css' media='all' rel='stylesheet' type='text/css'>
+  <link href='/stylesheets/all-914b39f5d1524602be2383e90332e921.css' media='all' rel='stylesheet' type='text/css'>
   <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 </head>
 
@@ -79,13 +79,13 @@ We try to have a healthy mix of current systems papers and older seminal
 papers.</p>
 
 <p>You can join our mailing list,
-<a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#100;&#115;&#114;&#103;&#064;&#099;&#115;&#097;&#105;&#108;&#046;&#109;&#105;&#116;&#046;&#101;&#100;&#117;">&#100;&#115;&#114;&#103;&#064;&#099;&#115;&#097;&#105;&#108;&#046;&#109;&#105;&#116;&#046;&#101;&#100;&#117;</a>
+<a href="mailto:dsrg@csail.mit.edu">dsrg@csail.mit.edu</a>
 <a href="https://lists.csail.mit.edu/mailman/listinfo/dsrg">here</a>.
 We welcome non-MIT attendees who want to participate. We will also
 broadcast the meetings via Google Hangout by request, but we’ve decided
 not to record them.</p>
 
-<p>Email the mailing list or <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#106;&#102;&#114;&#103;&#064;&#109;&#105;&#116;&#046;&#101;&#100;&#117;">&#106;&#102;&#114;&#103;&#064;&#109;&#105;&#116;&#046;&#101;&#100;&#117;</a> with any
+<p>Email the mailing list or <a href="mailto:jfrg@mit.edu">jfrg@mit.edu</a> with any
 questions.</p>
 
   </article>
